test/ui/tests/name-resolution/circular-use2.stderr
error[E024]: the declarations `capsule.indirect.thing` and `capsule.thing` are circular
 --> ${DIRECTORY}/name-resolution/circular-use2.lushui:3:14
  |
3 | use indirect.thing
  |              ^^^^^ 
  |
 --> ${DIRECTORY}/name-resolution/circular-use2.lushui:4:40
  |
4 | module indirect of { @public use super.thing }
  |                                        ^^^^^ 
  |

error[E024]: the declaration `capsule.alpha` is circular
 --> ${DIRECTORY}/name-resolution/circular-use2.lushui:6:11
  |
6 | use alpha.alpha
  |           ^^^^^ 
  |

error[E024]: the declarations `capsule.omega` and `capsule.bridge` are circular
 --> ${DIRECTORY}/name-resolution/circular-use2.lushui:8:20
  |
8 | use omega.omega as bridge
  |                    ^^^^^^ 
  |
 --> ${DIRECTORY}/name-resolution/circular-use2.lushui:9:15
  |
9 | use bridge as omega
  |               ^^^^^ 
  |

error[E024]: the declaration `capsule.cycle` is circular
  --> ${DIRECTORY}/name-resolution/circular-use2.lushui:11:5
   |
11 | use cycle
   |     ^^^^^ 
   |

error: aborting due to 4 previous errors
 note: the error E024 has a detailed explanation
 help: run `lushui explain E024` to view it

